fix: change typhoon back + correct en.json AB#17588

--- a/interfaces/IBF-dashboard/src/assets/i18n/en.json
+++ b/interfaces/IBF-dashboard/src/assets/i18n/en.json
@@ -1083,7 +1083,7 @@
           "TS": "Tropical storm",
           "STS": "Severe tropical storm",
           "TY": "Typhoon",
-          "ST": "Super typhoon"
+          "STY": "Super typhoon"
         }
       }
     }
