--- a/interfaces/IBF-dashboard/src/assets/i18n/en.json
+++ b/interfaces/IBF-dashboard/src/assets/i18n/en.json
@@ -92,7 +92,8 @@
         "header": "Result",
         "update-success": "State of early action(s) successfully updated.",
         "update-failure": "Failed to update state of early action(s).",
-        "prompt-button-label": "OK"
+        "prompt-button-label": "OK",
+        "no-actions": "There are currently no early actions to be checked off in the portal, please follow the local protocols relevant to the areas affected."
       },
       "stop-trigger-popup": {
         "eap": {
