--- a/interfaces/IBF-dashboard/src/assets/i18n/en.json
+++ b/interfaces/IBF-dashboard/src/assets/i18n/en.json
@@ -189,7 +189,7 @@
         "welcome": "To your right is the map of your country. You can turn other layers on and off. There are currently <strong>no triggers</strong> issued."
       },
       "active-event-active-trigger": {
-        "welcome": "A trigger warning for <strong>{{ eventName }}</strong> was issued on <strong>{{ startDate }}</strong> for <strong>{{ firstLeadTimeDate }}</strong>."
+        "welcome": "A trigger warning for <strong>{{ eventName }}</strong> was issued on <strong>{{ startDate }}</strong> to start in <strong>{{ firstLeadTimeDate }}</strong> with a duration of <strong>{{ duration}}</strong> months."
       },
       "active-event-no-trigger": {
         "welcome": "There is <strong>no active trigger</strong> any more, as can be seen in the map, which always reflects the latest forecast. However, you can still see here the EAP-actions that relate to the event that started on <strong>{{ startDate }}</strong> and ended on <strong>{{ endDate }}</strong>. These actions stay visible here for 7 days after the end-date."
