fix: make typhoon load 1st event again AB#18328

--- a/interfaces/IBF-dashboard/src/assets/i18n/en.json
+++ b/interfaces/IBF-dashboard/src/assets/i18n/en.json
@@ -259,7 +259,7 @@
         "area": "The typhoon trigger warning for <strong>{{ placeCodeName }}</strong>{{ parentName }} issued on <strong>{{ startDate }}</strong> was manually stopped by <strong>{{ displayName }}</strong> on <strong>{{ stoppedDate }}</strong>."
       },
       "event-switcher": {
-        "current-event-message": "See less",
+        "current-event-message": "The portal is currently showing this event.",
         "switch-event-button": "Show {{eventName}}"
       }
     },
