fix: update copy + move to en.json AB#18591

--- a/interfaces/IBF-dashboard/src/assets/i18n/en.json
+++ b/interfaces/IBF-dashboard/src/assets/i18n/en.json
@@ -344,6 +344,17 @@
           "STY": "Super typhoon"
         }
       }
+    },
+    "community-notification": {
+      "title": "Community notification",
+      "date": "<strong>Sent on:</strong> {{ formattedDate }}",
+      "hazard-type": "<strong>Type of hazard:</strong> {{ type }}",
+      "village-name": "<strong>Name of village:</strong> {{ nameVillage }}",
+      "description": "<strong>What is observed:</strong> {{ description }}",
+      "volunteer": "<strong>Sent by (volunteer):</strong> {{ nameVolunteer }}",
+      "photo": "See attached photo",
+      "no-photo": "There is no attached photo",
+      "delete": "Delete notification"
     }
   }
 }
