fix: change image to photo + move to en.json AB#18591

--- a/interfaces/IBF-dashboard/src/assets/i18n/en.json
+++ b/interfaces/IBF-dashboard/src/assets/i18n/en.json
@@ -357,7 +357,10 @@
       "delete": "Delete notification",
       "delete-question": "Are you sure you want to delete the notification?",
       "delete-cancel": "Cancel",
-      "delete-confirm": "Confirm"
+      "delete-confirm": "Confirm",
+      "photo-popup": {
+        "title": "Community notification - photo"
+      }
     }
   }
 }
