--- a/interfaces/IBF-dashboard/src/assets/i18n/en.json
+++ b/interfaces/IBF-dashboard/src/assets/i18n/en.json
@@ -71,7 +71,8 @@
     "stopped-prefix": "Manually stopped",
     "all-prefix": "All",
     "exposed-subgroups": "",
-    "stopped-placecode": "(stopped)"
+    "stopped-placecode": "(stopped)",
+    "national-view": "National View"
   },
   "areas-of-focus-summary-component": {
     "title": "Actions Summary",
