--- a/interfaces/IBF-dashboard/src/assets/i18n/en.json
+++ b/interfaces/IBF-dashboard/src/assets/i18n/en.json
@@ -87,7 +87,8 @@
   "chat-component": {
     "common": {
       "warn-label": {
-        "message": "Hello {{ name }}. The information in this portal is based on the model last run on <strong>{{lastModelRunDate}}</strong>."
+        "message": "Hello {{ name }}. The information in this portal is based on the model last run on <strong>{{lastModelRunDate}}</strong>.",
+        "tooltip": "The forecast presented on the portal might not be up date as the model did not run successfully. Contact IBF support for further information."
       },
       "revert-selection": "All",
       "save-actions": {
