--- a/interfaces/IBF-dashboard/src/assets/i18n/en.json
+++ b/interfaces/IBF-dashboard/src/assets/i18n/en.json
@@ -171,19 +171,15 @@
         "header": "Trigger: {{ eventName }} on {{firstLeadTimeDate}}",
         "header-ongoing": "Ongoing trigger: {{ eventName }}",
         "header-below-trigger": "Warning: {{ eventName }} on {{firstLeadTimeDate}}",
-        "welcome": "<strong>Forecasted:</strong> {{firstLeadTimeDate}}<br><strong>Exposed TA/Bomas:</strong> {{ nrTriggeredAreas }}",
-        "welcome-below-trigger": "<strong>Predicted:</strong> {{firstLeadTimeDate}}<br><strong>Exposed TA/Bomas:</strong> {{ nrTriggeredAreas }}"
+        "welcome": "A <strong>{{ disasterTypeLabel }}</strong> trigger in <strong>{{ eventName }}</strong> was issued on <strong>{{ startDate }}</strong>.",
+        "welcome-below-trigger": "A warning for <strong>{{ disasterTypeLabel }}</strong> in <strong>{{ eventName }}</strong> was issued on <strong>{{ startDate }}</strong>, but it can currently not be predicted to reach trigger thresholds yet."
       },
       "active-event": {
-        "overview": "(Listed in order of exposed population)",
-        "overview-below-trigger": "(Listed in order of exposed population)",
-        "instruction": "",
+        "overview": "There are <strong>{{ nrTriggeredAreas }}</strong> {{ adminAreaLabelPlural }} triggered. They are listed below in order of {{ actionIndicator}} and are highlighted in the map with a red outline.",
+        "overview-below-trigger": "There are <strong>{{ nrTriggeredAreas }}</strong> {{ adminAreaLabelPlural }} exposed. They are listed below in order of {{ actionIndicator}}.",
+        "instruction": "Please select an area to monitor by selecting from the list or on the map and manage the trigger and the preplanned anticipatory actions (if applicable) of each area.",
         "place-name": "{{ adminAreaLabel }}: <strong>{{ placeName }}</strong>{{ parentName }}",
         "exposed": "Exposed Population:"
-      },
-      "ongoing-event": {
-        "header": "Ongoing trigger: {{ eventName }}",
-        "welcome": "<strong>Forecasted:</strong> {{ forecastDate }}.<br><strong>Exposed TA/vomas:</strong> {{ nrExposedAreas }}"
       },
       "stopped-event": {
         "overview": "The following <strong>{{ nrStoppedAreas }}</strong> {{adminAreaLabelPlural}} were manually stopped. They are listed below in order of {{ actionIndicator }} and are highlighted in the map with a black outline.",
@@ -250,7 +246,9 @@
       },
       "active-event-active-trigger": {
         "header": "Trigger: {{ eventName }} at {{firstLeadTimeDate}}",
+        "header-ongoing": "Ongoing trigger: {{ eventName }} at {{firstLeadTimeDate}}",
         "header-below-trigger": "Warning: {{ eventName }} at {{firstLeadTimeDate}}",
+        "header-ongoing-below-trigger": "Ongoing warning: {{ eventName }} at {{firstLeadTimeDate}}",
         "welcome": "A trigger warning for <strong>{{ eventName }}</strong> was issued on {{ startDate }}.",
         "welcome-below-trigger": "A warning for <strong>{{ eventName }}</strong> was issued on {{ startDate }}, but it is currently <strong>not predicted to reach trigger thresholds</strong>.",
         "upcoming-event": {
