--- a/interfaces/IBF-dashboard/src/assets/i18n/en.json
+++ b/interfaces/IBF-dashboard/src/assets/i18n/en.json
@@ -97,7 +97,7 @@
         "update-success": "State of early action(s) successfully updated.",
         "update-failure": "Failed to update state of early action(s).",
         "prompt-button-label": "OK",
-        "no-actions": "There are currently no early actions to be checked off in the portal, please follow the local protocols relevant to the areas affected."
+        "no-actions": "There are no early actions in the portal yet. Please follow the local protocols relevant to the areas affected and review the portal later."
       },
       "stop-trigger-popup": {
         "eap": {
