fix: translation + prettier AB#23653

--- a/interfaces/IBF-dashboard/src/assets/i18n/en.json
+++ b/interfaces/IBF-dashboard/src/assets/i18n/en.json
@@ -382,5 +382,8 @@
         "title": "Community notification - photo"
       }
     }
+  },
+  "breadcrumbs": {
+    "national-view": "National View"
   }
 }
