style: update font size of layers menu AB#23653

--- a/interfaces/IBF-dashboard/src/assets/i18n/en.json
+++ b/interfaces/IBF-dashboard/src/assets/i18n/en.json
@@ -385,5 +385,8 @@
   },
   "breadcrumbs": {
     "national-view": "National View"
+  },
+  "layers-menu": {
+    "menu-toggle-label": "Layers"
   }
 }
