--- a/interfaces/IBF-dashboard/src/assets/i18n/en.json
+++ b/interfaces/IBF-dashboard/src/assets/i18n/en.json
@@ -77,7 +77,8 @@
   "areas-of-focus-summary-component": {
     "title": "Actions Summary",
     "aof-subtitle": "Sector",
-    "tasks-subtitle": "Completed"
+    "tasks-subtitle": "Completed",
+    "not-applicable": "N/A"
   },
   "ibf-guide-component": {
     "title": "IBF Guide",
