feat: add river gauge popup AB#25131

--- a/interfaces/IBF-dashboard/src/assets/i18n/en.json
+++ b/interfaces/IBF-dashboard/src/assets/i18n/en.json
@@ -380,6 +380,14 @@
       "photo-popup": {
         "title": "Community notification - photo"
       }
+    },
+    "river-gauge": {
+      "unit": "cm",
+      "header": "River gauge #",
+      "current": "Current water level",
+      "normal": "Normal water level",
+      "below": "Below normal level",
+      "above": "Above normal level"
     }
   },
   "breadcrumbs": {
