fix: tooltip + info popup AB#25132

--- a/interfaces/IBF-dashboard/src/assets/i18n/en.json
+++ b/interfaces/IBF-dashboard/src/assets/i18n/en.json
@@ -390,7 +390,7 @@
       "below": "Below reference level",
       "above": "Above reference level",
       "no-data": "No water level data available",
-      "tooltip": "Current water level displays the measurement in meters above sea level (mMSL) from the latest model run, with a color-coded indicator showing the change compared to 24 hours ago (green for decrease, red for increase). The bar chart compares the current water level to a reference level, representing the typical water level for this station during this season."
+      "tooltip": "Current water level in meters above sea level (mMSL) is measured by a gauge during the latest model run. The difference compared to 24 hours ago is shown in green for decrease or red for increase. The reference water level is the typical level for this station during this season."
     }
   },
   "breadcrumbs": {
