fix: handle no data better AB#25411

--- a/interfaces/IBF-dashboard/src/assets/i18n/en.json
+++ b/interfaces/IBF-dashboard/src/assets/i18n/en.json
@@ -391,6 +391,9 @@
       "above": "Above reference level",
       "no-data": "No water level data available",
       "tooltip": "Current water level in meters above sea level (mMSL) is measured by a gauge during the latest model run. The difference compared to 24 hours ago is shown in green for decrease or red for increase. The reference water level is the typical level for this station during this season."
+    },
+    "glofas-station": {
+      "no-data": "No water discharge data available"
     }
   },
   "breadcrumbs": {
